2003-04-21    Ping Cheng <pingc@wacom.com>

	* Added Cintiq Partner, Graphire3 4x5 and 6x8
	* Added a few new xsetwacom commands

2003-05-04    John E. Joganic <john@joganic.com>

	* Overhauled device reading.
	* Consolidated serial data path.
	* Updated ISDV4 data path, untested.
	* Added data history buffer and working state.
	* Added raw data filtering.
	* Commented out some incomplete features.

2003-05-03    John E. Joganic <john@joganic.com>

	* Fixed USB 4D mouse button mapping to be consistent with serial 4D.

2003-05-02    John E. Joganic <john@joganic.com>

	* Added xsetwacom, libwacomcfg, and Xwacom.h; work in progress
	* xsetwacom, wacdump, libwacomcfg, and xidump now install by default.
	* Added pressure curve, buttons, and bounding rect parameters.

2003-05-01    John E. Joganic <john@joganic.com>

	* Changed Graphire from absolute wheel to relative.
	* Moved throttle position check out of Suppress.  Need it elsewhere.
	* Fixed xidump library dependencies for non-gtk build

2003-04-29    John E. Joganic <john@joganic.com>

	* Expanded graphire parsing; all devices use same data path
	* Disabled throttle/wheel correlation for now; needs work and
	  option for enabling/disabling.
	* Split absolute and relative wheel at early data path stage
	* Added pressure curve; implementation is a bit overkill, but it works

2003-04-21    Ping Cheng <pingc@wacom.com>

	* Updated serial UD and PL code for the refactored src

2003-04-19    Jimmy Yen <jimmy@yen.tp>

	* Fixed throttle code.
	* Slightly refined Xinerama code. Use X's own global variable instead
	  for Xinerama detection.
	* Disallow pointers to enter dead areas, causing setting screen to fail.

2003-04-18    Jimmy Yen <jimmy@yen.tp>

	* Extra checking to set screen only when the device sends core events.
	* Made KeepShape compatible with multiple screen setup.
	* Reenabled throttle and fake button 4/5 code. Can be disabled by
	  setting 'Option "MouseWheel" "off"'. This still needs work.