@@ -1,4 +1,11 @@
-2003-04-21    Ping Cheng <pingc@wacom.com>
+2003-05-12    Ping Cheng <pingc@wacom.com>
+	* Removed FIRST_TOUCH_FLAG (J. Yen's patch for wcmCommon.c)
+	* Cleaned valuator report for relative mode
+	* Send 4th/5th buttons for all relative wheels
+	* Report in-prox after tool is set (J. Yen's patch for wacom.c)
+	* Fixed compile warning for xf86Wacom.c
+
+2003-05-9    Ping Cheng <pingc@wacom.com>
 
 	* Added Cintiq Partner, Graphire3 4x5 and 6x8
 	* Added a few new xsetwacom commands
